# llm_instruct_ms

./: .dockerignore  .gitignore  README.md  docker-compose.yaml  dockerfile.dev  dockerfile.prod  pyproject.toml  pyrightconfig.json
.github/workflows/: build-analysis-test.yml  build-pypi-docker.yml
config/: DevsDoCode-LLama-3-8b-Uncensored copy.yaml  DevsDoCode-LLama-3-8b-Uncensored.yaml  IlyaGusev-saiga_llama3_8b-4bits.yaml  Llama-3-8B-Lexi-Uncensored.yaml  NousResearch-Hermes-3-Llama-3.1-8B-GGUF.yaml  Vikhr.yaml  chuanli11-Llama-3.2-3B-Instruct-uncensored.yaml  deepvk-llava-saiga-8b.yaml  meta-llama-Meta-Llama-3-8B-Instruct.yaml  meta-llama-Meta-Llama-3.2.yaml
config/gui_config/: default.yaml
config/uvicorn_config/: default.yaml
src/AGISwarm/llm_instruct_ms/: GUI.html  __init__.py  __main__.py  app.py  llm.py  settings.py  typing.py
src/AGISwarm/llm_instruct_ms/app/: __init__.py  app.py
src/AGISwarm/llm_instruct_ms/app/gui/: current_index.html  jinja2.html  scripts.js  style.css
src/AGISwarm/llm_instruct_ms/gui/: current_index.html  jinja2.html  scripts.js  style.css
src/AGISwarm/llm_instruct_ms/llm_engines/: __init__.py  engine.py  hf.py  hf_engine.py  llama_cpp_engine.py  utils.py  vllm.py  vllm_engine.py
tests/functional_tests/: test_functional_example.py
