[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "AGISwarm.llm_instruct_ms"
dynamic = ["version"]
description = "LLM Instruct Microservice project"
readme = "README.md"

requires-python = ">=3.10"
license = { file = "LICENSE.txt" }
keywords = ["sample", "setuptools", "development"]
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    'numpy~=1.26.0',
    "fastapi~=0.114.0",
    "uvicorn~=0.29.0",
    "pydantic~=2.9.0",
    "hydra-core~=1.3.2",
    "AGISwarm.asyncio-queue-manager@git+https://github.com/AGISwarm/asyncio-queue-manager.git#egg=v0.4.0",
    "huggingface_hub[cli]",
    "vllm==0.6.3.post1",
    "jinja2"
]
[project.optional-dependencies]

test = ['pytest~=8.2.1']
analyze = [
    'pyright',
    'pylint',
    'bandit',
    'black',
    'isort',
]
build = ['setuptools', 'wheel', 'build']
publish = ['twine']

all = [
    'AGISwarm.llm_instruct_ms[test]',
    'AGISwarm.llm_instruct_ms[analyze]',
]


[tool.setuptools.dynamic]
version = { file = "VERSION" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
python_template = ["py.typed"]

[tool.isort]
profile = "black"

[tool.pylint.'MESSAGES CONTROL']
disable = "wrong-import-order"
